Fixed Team Controller